# mood

./: Cargo.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: clippy.yml
src/: action.rs  app.rs  audio_thread.rs  config.rs  current_track.rs  cursor.rs  event.rs  input.rs  io.rs  main.rs  music.rs  player.rs  source.rs  task.rs  utils.rs
src/app/: command.rs  mod.rs
src/component/: control_bar.rs  fallback.rs  gen_popup.rs  header.rs  mod.rs  new_playlist_input.rs  playlist.rs  search.rs  tracklist.rs
src/components/: mod.rs  player_controls.rs  playlist.rs  tracklist.rs
src/components/utils/: mod.rs  vertical_scroll.rs
src/io/: mod.rs
src/model/: mod.rs  playlist.rs  track.rs
src/models/: mod.rs  track.rs
src/screen/: player.rs
src/widget/: control_bar.rs  cursor.rs  gen_popup.rs  header.rs  mod.rs  new_playlist_input.rs  player.rs  playlist.rs  popup.rs  screen.rs  tracklist.rs
