[package]
name = "mood"
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"

[dependencies]
crossbeam-channel = "0.5.15"
crossterm = "0.29.0"
dirs = "6.0.0"
lofty = "0.22.4"
rand = "0.9.1"
ratatui = "0.29.0"
rodio = "0.20.1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
uuid = { version = "1.17.0", features = ["v4"] }
