[package]
name = "mood_clean"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0-alpha.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync"] }
uuid = { version = "1.18.1", features = ["v4"] }
crossbeam-channel = "0.5.15"
color-eyre = "0.6.5"
