[package]
name = "mood_clean"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.30.0-alpha.5", features = ["unstable-widget-ref"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
uuid = { version = "1.18.1", features = ["v4"] }
crossbeam-channel = "0.5.15"
color-eyre = "0.6.5"
rusqlite = { version = "0.37.0", features = ["bundled"] }
lofty = "0.22.4"
